# amazon-seller-autopilot

./: .env.example  .gitignore  README.md  docker-compose.yml  frontend_integration_stories.json  package-lock.json  package.json  turbo.json  user_stories.json
.github/ISSUE_TEMPLATE/: user-story.yml
.github/workflows/: ci.yml
apps/api/: alembic.ini  main.py  package.json  pyproject.toml
apps/api/agents/: __init__.py  listing_agent.py  pricing_agent.py
apps/api/agents/prompts/: listing_prompt.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/core/: config.py  database.py  encryption.py  event_bus.py  event_bus_setup.py  middleware.py  security.py  ws_manager.py
apps/api/integrations/: circuit_breaker.py  sp_api.py  sp_api_connector.py
apps/api/models/: __init__.py  agent_action.py  amazon_connection.py  approval_queue.py  audit_log.py  base.py  notification_log.py  tenant.py  tenant_context.py  user.py
apps/api/routers/: approvals.py  auth.py  connections.py  dashboard.py  listings.py  notifications.py  search.py  ws.py
apps/api/schemas/: auth.py
apps/api/services/: auth_service.py  notification_service.py  workflow_engine.py
apps/api/tests/: conftest.py  test_approval_workflow.py  test_auth.py  test_dashboard_api.py  test_database.py  test_event_bus.py  test_health.py  test_listing_agent.py  test_listings_api.py  test_middleware.py  test_pricing_agent.py  test_sp_api_connector.py  test_sp_api_oauth.py  test_websocket.py
apps/web/: package.json  tailwind.config.ts  vitest.config.ts
(+31 files in other folders)
