[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "core*", "services*", "routers*", "schemas*", "integrations*", "agents*"]

[project]
name = "seller-autopilot-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "aioboto3>=13.0.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
